---------------------------------------------------------------------------------------------------
Version: 1.1.4
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.1.3
Date: 2021-02-25
  Minor Features:
    - Added support for fluid spawning.
  Bugfixes:
    - Fixed inserting items with 0 count.
---------------------------------------------------------------------------------------------------
Version: 1.1.2
Date: 2021-02-15
  Changes:
    - Added minimum and maximum values to the "Minimum distance from spawn" setting.
---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 2021-02-01
  Bugfixes:
    - Fixed desync when spawning ruins that had already been spawned previously.
    - Fixed crash when claiming ruins due to weird mod interaction.
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 2021-01-27
  Features:
    - Updated to Factorio 1.1.
    - Added Finnish translation (by Sigma-One).
    - Larger ruins can only be found at a larger distance from spawn (minimum distance multiplied by 2.5 and 5 respectively).
  Bugfixes:
    - Fixed that the ruins cease_fire status for forces that were created during gameplay was missing.
---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: 2020-10-19
  Changes:
    - Replaced un-minable non-terrain tiles in ruins with minable tiles.
    - Hold Shift while using the "Claim ruin" tool to remove all remnants (corpses of structures) in the area.
  Bugfixes:
    - Fixed a crash when a ruin was spawned with a invalid recipe.
    - Fixed that the claim ruin control had no locale.
---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 2020-09-28
  Bugfixes: